add categories to back-end
